// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render data with disabled items 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="toolbarContainer"
      style="margin-left:0"
    >
      <div
        class="toolbar"
      >
        <a
          class="item primary"
        >
          <span
            aria-label="su-cog"
            class="su-cog"
          />
        </a>
      </div>
    </div>
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item active selected"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-check"
                class="su-check clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="item active disabled"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-check"
                class="su-check clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1.1"
                class="croppedText"
                title="Page 1.1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                     1.1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1.1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data with loading column 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="toolbarContainer"
      style="margin-left:0"
    >
      <div
        class="toolbar"
      >
        <a
          class="item primary"
        >
          <span
            aria-label="su-cog"
            class="su-cog"
          />
        </a>
      </div>
    </div>
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item active"
            role="button"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 2"
                class="croppedText"
                title="Page 2"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 2
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="loader"
          >
            <div
              class="spinner"
              style="width:40px;height:40px"
            >
              <div
                class="doubleBounce1"
              />
              <div
                class="doubleBounce2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data with name as fallback for title 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data with selection 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="toolbarContainer"
      style="margin-left:0"
    >
      <div
        class="toolbar"
      >
        <a
          class="item primary"
        >
          <span
            aria-label="su-cog"
            class="su-cog"
          />
        </a>
      </div>
    </div>
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item selected"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-check"
                class="su-check clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data without edit button 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="toolbarContainer"
      style="margin-left:0"
    >
      <div
        class="toolbar"
      >
        <a
          class="item primary"
        >
          <span
            aria-label="su-cog"
            class="su-cog"
          />
        </a>
      </div>
    </div>
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render different kind of data with edit button 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="toolbarContainer"
      style="margin-left:0"
    >
      <div
        class="toolbar"
      >
        <a
          class="item primary"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </a>
        <a
          class="item primary"
        >
          <span
            aria-label="su-cog"
            class="su-cog"
          />
        </a>
      </div>
    </div>
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                class="draft"
              />
            </span>
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
          <div
            class="item active"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2"
                class="croppedText"
                title="Page 2"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 2
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                class="published"
              />
              <span
                class="draft"
              />
            </span>
            <span
              class="children"
            />
          </div>
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 3"
                class="croppedText"
                title="Page 3"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 3
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 3
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                aria-label="su-link2"
                class="su-link2"
              />
            </span>
            <span
              class="indicator"
            >
              <span
                class="published"
              />
              <span
                class="draft"
              />
            </span>
            <span
              class="children"
            />
          </div>
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 4"
                class="croppedText"
                title="Page 4"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 4
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 4
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                aria-label="su-link2"
                class="su-link2"
              />
            </span>
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="item active"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-plus-circle"
                class="su-plus-circle clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2.1"
                class="croppedText"
                title="Page 2.1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                     2.1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2.1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                class="ghostIndicator"
              >
                nl
              </span>
            </span>
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-plus-circle"
                class="su-plus-circle clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2.2"
                class="croppedText"
                title="Page 2.2"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                     2.2
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2.2
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                class="ghostIndicator"
              >
                nl
              </span>
            </span>
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2.3"
                class="croppedText"
                title="Page 2.3"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                     2.3
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2.3
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                aria-label="su-link"
                class="su-link"
              />
            </span>
            <span
              class="indicator"
            >
              <span
                class="published"
              />
              <span
                class="draft"
              />
            </span>
            <span
              class="children"
            />
          </div>
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2.4"
                class="croppedText"
                title="Page 2.4"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                     2.4
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2.4
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                aria-label="su-link"
                class="su-link"
              />
            </span>
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2.1.1"
                class="croppedText"
                title="Page 2.1.1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page 
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    2.1.1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2.1.1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                aria-label="su-shadow-page"
                class="su-shadow-page"
              />
            </span>
            <span
              class="indicator"
            >
              <span
                class="draft"
              />
            </span>
            <span
              class="children"
            />
          </div>
          <div
            class="item"
            role="button"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="su-pen clickable button"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2.1.2"
                class="croppedText"
                title="Page 2.1.2"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page 
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    2.1.2
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2.1.2
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                aria-label="su-shadow-page"
                class="su-shadow-page"
              />
            </span>
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with add button in toolbar when onItemAdd callback is given 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="toolbarContainer"
      style="margin-left:0"
    >
      <div
        class="toolbar"
      >
        <a
          class="item primary"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </a>
        <a
          class="item primary"
        >
          <span
            aria-label="su-cog"
            class="su-cog"
          />
        </a>
      </div>
    </div>
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        />
      </div>
    </div>
  </div>
</div>
`;
